Fixed  bug when z-index too high and moved insidela link to the image

--- a/resources/intranet_nav.css
+++ b/resources/intranet_nav.css
@@ -10,7 +10,7 @@ body,html{
   left: 0;
   right: 0;
   padding-top: 10px;
-  z-index: 9999999999 !important;
+  z-index: 999999999 !important;
 }
 .global-nav-service a {
   color: #474747;
